@@ -75,5 +75,6 @@
         <file>images/services/spike.com.png</file>
         <file>images/services/videos.cinemavip.com.png</file>
         <file>images/services/video.yahoo.com.png</file>
+        <file>images/services/gamespot.com.png</file>
     </qresource>
 </RCC>
