@@ -28,8 +28,8 @@
 #ifndef __PROGRAMVERSION_H__
 #define __PROGRAMVERSION_H__
 
-static const QString PROGRAM_VERSION		= "1.5.1 Alpha"; 	//<! Current program version
-static const QString PROGRAM_VERSION_SHORT	= "1.5.1a"; 		//<! Current program version (short version)
+static const QString PROGRAM_VERSION		= "1.6 Alpha"; 	//<! Current program version
+static const QString PROGRAM_VERSION_SHORT	= "1.6a"; 		//<! Current program version (short version)
 
 #ifdef Q_OS_WIN32
 static const QString CURRENT_OS = "MSWINDOWS"; //<! Microsoft windows version
